--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-------------------- START WELCOME SECTION ------------------------------->
     <div class="video-background">
         <video autoplay muted loop>
-            <source src="./videos/CodeVid.mp4" type="video/mp4">
+            <source src="./videos/CodeVideo.mp4" type="video/mp4">
             Your browser does not support the video tag !
         </video>
     </div>
